[gd_scene load_steps=4 format=3 uid="uid://c56tlih7seaxm"]

[ext_resource type="Script" path="res://scripts/title.gd" id="1_wdayv"]
[ext_resource type="PackedScene" uid="uid://dcbrl5miuvflu" path="res://scenes/options.tscn" id="4_u7bnj"]

[sub_resource type="LabelSettings" id="LabelSettings_kbful"]
font_size = 50

[node name="Title" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_wdayv")

[node name="Background" type="Control" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="TitleLabel" type="Label" parent="."]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -20.5
offset_top = 69.0
offset_right = 20.5
offset_bottom = 138.0
grow_horizontal = 2
text = "<Game title>"
label_settings = SubResource("LabelSettings_kbful")
horizontal_alignment = 1

[node name="LogoPanel" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -150.0
offset_top = -150.0
offset_right = 150.0
offset_bottom = 150.0
grow_horizontal = 2
grow_vertical = 2

[node name="ButtonContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -117.0
offset_top = -201.0
offset_right = 117.0
offset_bottom = -1.0
grow_horizontal = 2
grow_vertical = 0
alignment = 1

[node name="PlayButton" type="Button" parent="ButtonContainer"]
layout_mode = 2
text = "Play"

[node name="OptionsButton" type="Button" parent="ButtonContainer"]
layout_mode = 2
text = "Options"

[node name="ExitButton" type="Button" parent="ButtonContainer"]
layout_mode = 2
text = "Exit"

[node name="CreditsButton" type="Button" parent="."]
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -122.0
offset_top = -58.0
offset_right = -43.0
offset_bottom = -27.0
grow_horizontal = 0
grow_vertical = 0
text = "Credits"

[node name="Options" parent="." instance=ExtResource("4_u7bnj")]
visible = false
layout_mode = 1
